--- a/style.css
+++ b/style.css
@@ -38,3 +38,18 @@ footer {
     background: #333;
     color: #fff;
 }
+
+/* Dark Theme Styles */
+body.dark-theme {
+    background-color: #333;
+    color: #fff;
+}
+
+body.dark-theme header, body.dark-theme footer {
+    background-color: #222;
+    color: #fff;
+}
+
+body.dark-theme nav ul li a {
+    color: #fff;
+}
